Fix: product thumbnails on mobile site too small

--- a/assets/styles/layout.less
+++ b/assets/styles/layout.less
@@ -51,6 +51,10 @@ body > main .content figure.illustration img {
 
 body > main > #content {
   width: 70%;
+
+  @media (@small) {
+    width: 100%;
+  }
 }
 
 body > main aside#sidebar {
